2012-03-28  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed bug #35031: Duplicate index entries if records are moved to another PID
	* Added an option to add arbitrary headers to Index Queue page indexer request
	* Added a report to check for allow_url_fopen to be enabled

2012-03-27  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed bug #35242: Class 'tx_solr_fileindexer_Queue' not found in Reindexer Scheduler Task
	* Fixed an issue where the Index Queue initializer would create an invalid SQL WHERE clause when no conditions were detected from TCA configuration of a table
	* Fixed an issue with Index Queue initialization of mount pages
	* Fixed handling of multivalue fields in template output, they are detected and converted into serialized arrays automatically now
	* Fixed issue #34435: Failed items in Index Queue stop whole indexing process
	* Improved logging of failures during page indexing
	* Fixed issue #30481: RealURL fails when indexing records outside the site root
	* Fixed bug #34558: Wrong processing of plugin.tx_solr.search.query.filter stdWrap, credits Jochem de Groot
	* Fixed bug #34637: cHash is not needed in the page browser, credits Dmitry Dulepov
	* Fixed bug #34535: Warnings caused by missing array initialization, credits Jigal van Hemert
	* Removed the result count from the suggest drop down - caused too much confusion
	* Added french translation, credits Pierrick Caillon
	* Fixed bug #29109: Form action url results per page selector is not html encoded, credits Jigal van Hemert
	* Fixed bug #30398: Suggest issue with character sets
	* Fixed bug #31144: Deleting documents with missing arguments suggests the operation was successful although it wasn't
	* Fixed bug #35068: Escaping the "plus" sign causes problems
	* Fixed crashing FACET view helper when no search has been executed

2012-02-23  Ingo Renner  <ingo.renner@dkd.de>

	* Release of v2.0.0

2012-02-21  Ingo Renner  <ingo.renner@dkd.de>

	* Added stdWrap for facet names and sorting option labels
