@@ -3,6 +3,7 @@
 	* Fixed bug #35031: Duplicate index entries if records are moved to another PID
 	* Added an option to add arbitrary headers to Index Queue page indexer request
 	* Added a report to check for allow_url_fopen to be enabled
+	* Added a report to detect PHP versions with buggy filter_var() function
 
 2012-03-27  Ingo Renner  <ingo.renner@dkd.de>
 
